# business-transparency-registry

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  COMPLIANCE.yaml  README.md  pyproject.toml
btr-api/: .dockerignore  .env.sample  .gcloudignore  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg  test_ci.txt  wsgi.py
btr-api/.devcontainer/: devcontainer.json  docker-compose.yml
btr-api/devops/kc/: btr-service-account.json  btr-service-dev.json  btr-service-prod.json  btr-service-test.json
btr-api/email-templates/: btr-ADDING_ADULT.html  btr-ADDING_ADULT.md  btr-ADDING_MINOR.html  btr-ADDING_MINOR.md  btr-UPDATING_MINOR_PUBLIC.html  btr-UPDATING_MINOR_PUBLIC.md
btr-api/email-templates/common/: btr-contact-business.md  btr-omit-info.md  btr-personal-details-minor-text.md  btr-personal-details-text.md  btr-personal-details.html  btr-personal-details.md  btr-registered-details.md  btr-title-notification-public.html  btr-title-notification-public.md  footer.md
btr-api/migrations/: alembic.ini
btr-api/migrations/versions/: 191f8d1ddc48_.py  20230821_191f8d1ddc48_.py  20231003_2049364ea0a6_.py  20231212_1530_4ce87b7566ff_.py  20240112_1323_da4fbdb48338_.py  20240115_1413_247ab32b10ec_.py  20240115_1413_f586cb178aff_.py  20240125_1548_80c36ed40ebb_.py  20240216_1631_7bae22a48842_.py  20240621_0823_0a5356f460a4_.py  20240814_1520_877c0b71efb6_.py  20240819_1435_8850fb7d527b_.py  20240924_0922_8d8279a86def_.py  (+10 more)
btr-api/sample_data/: first_nation_names.csv  generate_data.py  get_first_nations_data.py  load_data.py
btr-api/tests/: conftest.py
(+557 files in other folders)
